# GalaxeaVLA

./: .env  .env.example  .gitignore  .gitmodules  LICENSE-G0.5  LICENSE_QWEN3_5.txt  NOTICE  README.md  README_zh.md  THIRD_PARTY_NOTICES.md  index.html  pyproject.toml
configs/: QUICK_START.md  QUICK_START_zh.md  sim_robotwin.yaml  train.yaml
configs/data/: _transforms.yaml  bridge.yaml  droid.yaml  libero.yaml  r1lite.yaml  r1pro.yaml  r1pro_wbc.yaml  robotwin.yaml  so100.yaml
configs/data/parts_meta/: 10k_wbc.yaml  dual_arm_grouped_0409.yaml  gripper_wbc.yaml  r1lite.yaml  r1pro.yaml
configs/logger/: metrics_keys.yaml
configs/model/: g05.yaml
configs/task/: bridge.yaml  droid.yaml  libero.yaml  r1lite.yaml  r1pro.yaml  r1pro_wbc.yaml  robotwin.yaml  so100.yaml
configs/tokenizer/: actioncodec.yaml
docs/: README.md  README_zh.md  pick_up_anything_user_guideline.md
docs/architecture/: config.md  config_zh.md  g05_architecture.md  g05_architecture_zh.md  g05_config.md  g05_config_zh.md  g05_io.md  g05_io_zh.md  parts_meta.md  parts_meta_zh.md  qwen35_design.md  qwen35_design_zh.md  qwen_mem_overview.md  qwen_mem_overview_zh.md  tokenizer.md  tokenizer_zh.md
docs/data/: samples_builders.md  samples_builders_zh.md  schema.md  schema_zh.md
docs/deployment/: inference.md  inference_zh.md  model_debug_logging.md  model_debug_logging_zh.md  serve_policy.md  serve_policy_mem.md  serve_policy_mem_zh.md  serve_policy_zh.md
experiments/droid/: PROTOCOL.md  PROTOCOL_zh.md  README.md  start_server.sh
experiments/libero/: README.md  README_zh.md  eval_libero_parallel.py  libero_eval_utils.py  libero_vector_env.py
experiments/r1lite/: .gitignore  README.md  README_zh.md  config.toml  config_8082.toml  pyproject.toml  requirement.txt  run.py  start.sh
experiments/r1lite/core/communication/: __init__.py  message_queue.py  robot_topics.py  ros2_bridge.py
experiments/r1lite/core/inference/: factory.py  inference_engine.py  websocket_engine.py
experiments/r1lite/scheduler/: scheduler.py
experiments/r1lite/scheduler/instruction/: instruction.py
experiments/r1lite/scripts/: launch_client_8080.sh  launch_client_8082.sh  record.sh  run.sh
experiments/r1lite/tests/: conftest.py  test_datatype.py  test_factory.py  test_instruction_manager.py  test_msgpack.py
experiments/r1lite/utils/: episode_recorder.py  viz.py
experiments/r1lite/utils/message/: bbox_utils.py  datatype.py  message_convert.py
experiments/r1lite/utils/websocket/: msgpack.py
experiments/robotwin/: README.md  README_zh.md  __init__.py  eval_robotwin_single.py  run_robotwin_manager.py  setup_robotwin_venv.sh
experiments/robotwin/galaxeafm_policy/: __init__.py  deploy_policy.py  deploy_policy.yml
experiments/so100/: README.md  README_zh.md  client_config.yaml  debug_action_scale.py  environment.yml  so100_policy_client.py  start_client.sh  start_server.sh  start_server_local.sh
licenses/: LICENSE-G0.5
scripts/: eval_open_loop.py  finetune.py  serve_policy.py  serve_policy_batched.py  serve_policy_mem.py
scripts/run/: cal_stats.sh  eval_libero.sh  eval_open_loop.sh  finetune.sh
scripts/utils/: episode_recorder.py  eval_snapshot.py  mem_live_viz.py  metric.py  policy_ws_client.py  preflight.py  train_eval.py
src/g05/data/: __init__.py  base_lerobot_dataset.py  base_lerobot_datasetV3.py  galaxea_lerobot_dataset.py  mixture_lerobot_dataset.py  so100_canonical_dataset.py
src/g05/data/droid/: README.md  README_zh.md  __init__.py  droid_lerobot_dataset.py  droid_utils_pytorch.py
src/g05/data/lerobot/: lerobot_dataset.py  lerobot_dataset_v3.py
src/g05/data/lerobot/datasets/: compute_stats.py  util_v3.py  video_utils.py
src/g05/data_processor/: __init__.py
src/g05/data_processor/processor/: __init__.py  base_processor.py  galaxea_action_processor.py  galaxea_cot_processor.py  mixture_processor.py  samples_builder.py
src/g05/data_processor/transforms/: __init__.py  action_filter.py  action_state_merger.py  base.py  image.py  misc.py  relative_action.py  rotation.py
src/g05/models/: base_policy.py  kv_cache.py
src/g05/models/g05/: __init__.py  g05_model.py  g05_model_qwen35.py  g05_policy.py  g05_policy_qwen35.py  inferencer.py
src/g05/models/g05/helpers/: __init__.py  ar_helper.py  ar_sampling.py  fm_helper.py  mask_helper.py  proprio_helper.py
src/g05/models/g05/io/: batch_schema.py  input_preprocessor.py  templates.py
src/g05/models/g05/model/: modules.py  utils.py
src/g05/models/g05/qwen35/: __init__.py  gated_deltanet.py  mixture_qwen35.py  modules.py  processing.py  vision.py
src/g05/tokenizer/: token_registry.py
src/g05/tokenizer/interface/: bar_builder.py  base_action_tokenizer.py  proprio_encoder.py  serialization.py  vq_base.py
src/g05/tokenizer/models/: base_wrapper.py  protocol.py
src/g05/tokenizer/models/actioncodec2_v2/: __init__.py  (+6 more)
src/g05/tokenizer/utils/: misc.py  parts_meta_padding.py  parts_meta_utils.py
src/g05/utils/: hf.py
src/g05/utils/checkpoint/: checkpoint_utils.py  ckpt_utils.py
src/g05/utils/common/: dist.py  import_utils.py  pytorch_utils.py  special_tokens.py
src/g05/utils/config/: config_resolvers.py  config_validator.py
src/g05/utils/data/: data_utils.py  normalizer.py  processor_utils.py  rotation.py
src/g05/utils/eval/: eval_utils.py  visualize.py
src/g05/utils/logging/: banner.py  log_box.py  logging_config.py  overwatch.py
src/g05/utils/training/: accuracy_accumulator.py  action_accuracy.py  get_scheduler.py  train_utils.py
src/g05/utils/websocket/: __init__.py  msgpack.py
tests/: conftest.py  show_vla_label.py  test_dataloader_batch.py  test_serve_policy_dynamic_batching.py  test_serve_vs_dataset.py  test_train_eval_serve_consistency.py
tools/: export_checkpoint.py  resolve_config.py
(+2 files in other folders)
